# QuIK

./: CMakeLists.txt  QuIK.cpp  QuIK.h  README.md  Sphere.cpp  Sphere.h  SphereExterior.cpp  SphereExterior.h  SphereInterior.cpp  SphereInterior.h  Vec3.cpp  Vec3.h
QuIKVis/: CMakeLists.txt  QuIKVis.cpp  circleFilled_fp.glsl  circle_fp.glsl  line_fp.glsl  overlap_fp.glsl  overlap_vp.glsl  qvGLWidget.cpp  qvGLWidget.h  qvMainWindow.cpp  qvMainWindow.h  qvMainWindow.ui
